--- a/templates/sbatch.template
+++ b/templates/sbatch.template
@@ -5,7 +5,7 @@
 #SBATCH --mem=160G                       # Memory per core
 #SBATCH --time=SLURM_TIME                      # Duration of the job (Ex: 15 mins)
 #SBATCH -pSLURM_PARTITION                         # Queue name (where job is submitted)
-#SBATCH -o%x.out                         # Combined output and error messages file
+#SBATCH -oMOL_NAME.out                         # Combined output and error messages file
 
 cd $SLURM_SUBMIT_DIR                            # Change to working directory
 
